--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,8 +49,9 @@
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_below="@+id/appbar"
-        android:layout_alignParentBottom="true">
+        android:background="@color/colorPrimaryDark">
 
     </android.support.v4.view.ViewPager>
 </RelativeLayout>
