--- a/app/src/main/res/layout/item_day.xml
+++ b/app/src/main/res/layout/item_day.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/colorCardBackground"
     android:orientation="horizontal"
-    android:padding="@dimen/item_offset"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:padding="@dimen/item_offset">
 
     <TextView
         android:id="@+id/timeText"
